test/rbkt/Queries/zorba/parser/syntax-errors/missing-comma-01.xq
for $test in (1 to 10)
return if(true()) then {
 true();
 1
} else {

}

true()